force-app/main/default/objects/PayablesAmount__c/PayablesAmount__c.object-meta.xml
<CustomObject>
    <label>Payables Amount</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Payables Amount ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payables Amount</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>