force-app/main/default/objects/PayablesAmount__c/fields/GoodSO__c.field-meta.xml
<CustomField>
    <fullName>GoodSO__c</fullName>
    <label>Good S/O</label>
    <referenceTo>GoodsPurchasingOrder__c</referenceTo>
    <relationshipLabel>Payables Amount</relationshipLabel>
    <relationshipName>Payables_Amount</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>